--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -29,8 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.15.2",
-    "nodemailer": "^7.0.9",
-    "package-name": "^0.1.0"
+    "nodemailer": "^7.0.9"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
