--- a/.env
+++ b/.env
@@ -18,6 +18,7 @@ MYSQLDATABASE=railway
 SESSION_SECRET=your_super_session_secret
 JWT_SECRET=your_super_secret_key
 ADMIN_PASSWORD=12222
+API_URL=https://adama-shopping-3.onrender.com
 
 # =========================
 # 👑 ADMIN ACCOUNTS
